# PyNotify

./: .gitignore  README.rst  pyproject.toml  setup.cfg
PyNotify.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/source/: conf.py
docs/source/_ext/: autodoc_intflag.py  reflinks.py
docs/source/_static/css/: newline_params.css
pynotify/: .notifier.py.swp  __init__.py  event.py  notifier.py
pynotify/PyNotify.egg-info/: PKG-INFO  top_level.txt
tests/: test_event.py  test_notifier.py
