[metadata]
name = PyNotify
version = 0.1
author = Matt Riley
description = An asyncio interface to the Linux inotify API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/mcriley821/PyNotify
project_urls = 
  Issues = https://github.com/mcriley821/PyNotify/issues
license = LICENSE.txt
keywords = inotify, async, asyncio, asynchronous, monitor, file monitor
classifiers = 
  Programming Language :: Python :: 3
  Operating System :: POSIX :: Linux
  Framework :: AsyncIO
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  License :: OSI Approved :: The Unlicense (Unlicense)
  Natural Language :: English
  Topic :: System :: Filesystems
  Topic :: System :: Monitoring

[options]
python_requires = >= 3.10
packages = pynotify

